--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ time = { version = "0.3", features = ["formatting"] }
 clap = { version = "4", features = ["derive"] }
 regex = "1"
 tui-textarea = "0.6"
+portable-pty = "0.9"
